<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:paddingTop="@dimen/padding">

        <Button
            android:id="@+id/btn_refreshMapList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_refreshMapList"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_startNav"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/btn_startNav"/>

            <Button
                android:id="@+id/btn_stopNav"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/btn_stopNav"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_navStatus"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_navStatus"/>

                <TextView
                    android:id="@+id/tv_navStatus"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_robotControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_robotControl"/>

        <Button
            android:id="@+id/btn_robotAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_robotAction"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding">
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/srl_maplsit"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recy_mapList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>

</LinearLayout>