<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_markPoint"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/title_mapTitle"
                android:textStyle="bold"/>
            <TextView
                android:paddingLeft="@dimen/paddingLeft"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/title_mapCoordinate"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_mapCoordinate"
                android:paddingLeft="@dimen/paddingLeft"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/title_mapRealCoordinate"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_mapRealCoordinate"
                android:paddingLeft="@dimen/paddingLeft"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/title_angle"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_markAngle"
                android:paddingLeft="@dimen/paddingLeft"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/title_alias"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_markAlias"
                android:paddingLeft="@dimen/paddingLeft"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/title_desc"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_markDesc"
                android:paddingLeft="@dimen/paddingLeft"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/title_isStartPoint"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_isStartPoint"
                android:paddingLeft="@dimen/paddingLeft"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_navToPoint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_navToPoint"/>

    </LinearLayout>



</LinearLayout>